--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
   <link href="/css/bootstrap.min.css" rel="stylesheet">
 <script src="js/library/angular.min.js"></script>
 <script src="js/library/angular-route.js"></script>
-<script data-require="ui-bootstrap@0.12.0" data-semver="0.12.0" src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
+<script data-require="ui-bootstrap@0.12.0" data-semver="0.12.0" src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
 <script src="/js/angularjs/app.js"></script>
 </head>
 <body  ng-app="myApp" ng-controller="myCtrl">
