--- a/web/index.html
+++ b/web/index.html
@@ -27,10 +27,10 @@
             </div>
         <div class="row form-group">
                 <div class="col-sm-4 col-md-4 col-lg-4">
-                <input class="form-control" type="text" placeholder="Enter you name" ng-model="data.name" />
+                <input class="form-control" type="text" placeholder="Enter your name" ng-model="data.name" />
                 </div>
                 <div class="col-sm-4 col-md-4 col-lg-4">
-                        <input class="form-control" type="password" placeholder="Enter you name" ng-model="data.password" />
+                        <input class="form-control" type="password" placeholder="Enter password" ng-model="data.password" />
                         </div>
             </div>
         <div class="row form-group">
