--- a/web/login.html
+++ b/web/login.html
@@ -28,7 +28,7 @@
                   
                 </div>
                <div class="row form-group">
-                <button class="btn btn-success" ng-click="userlogin()">LogIn</button>
+                <button class="btn btn-success" ng-click="userlogin1()">LogIn</button>
                 </div>
             </form>
         </div>
