--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,9 @@
          <div><span>DOB:{{userfulldata.dofb | date:'yyyy-MM-dd'}}</span></div>
          <div><span>Address:{{userfulldata.uaddress}}</span></div>
      </div>
-  
+     <div class="btn btn-primary" ng-click="passport1()">Passport document</div>
+     <div class="btn btn-primary" ng-click="aadhar1()">Aadhar document</div>
+     <div class="btn btn-primary" ng-click="pan1()">Pan document</div>
   </div>
 <script src="/js/bootstrap.min.js"></script>
 </body>
